<resources>
    <string name="app_name">Finance</string>
    <string name="rates">Rates</string>
    <string name="exchange">Exchange</string>
    <string name="news">News</string>

    <string name="internet_error_title">Internet connection not found!</string>
    <string name="internet_error_message">Please, check your network settings</string>
    <string name="server_side_error_title">Couldn\'t receive data from server</string>
    <string name="server_side_error_message">Please, try to connect later</string>
    <string name="empty_favorites_error_title">Favorites list is empty</string>
    <string name="empty_favorites_error_message">Click favorite button near needed
        currencies and they will appear here</string>
    <string name="usd">USD</string>
    <string name="one">1</string>
    <string name="us_dollar">US Dollar</string>

    <string-array name="auto_refresh_entries">
        <item>Off</item>
        <item>Every 30 seconds</item>
        <item>Every minute</item>
        <item>Every 2 minutes</item>
        <item>Every 3 minutes</item>
        <item>Every 4 minutes</item>
        <item>Every 5 minutes</item>
    </string-array>

    <string-array name="auto_refresh_values">
        <item>off</item>
        <item>30000</item>
        <item>600000</item>
        <item>120000</item>
        <item>180000</item>
        <item>240000</item>
        <item>300000</item>
    </string-array>

    <string-array name="number_precision_entries">
        <item>1 digit after dot</item>
        <item>2 digits after dot</item>
        <item>3 digits after dot</item>
        <item>4 digits after dot</item>
    </string-array>

    <string-array name="number_precision_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="news_period_entries">
        <item>Last day</item>
        <item>Last 3 days</item>
        <item>Last 7 days</item>
    </string-array>

    <string-array name="news_period_values">
        <item>1</item>
        <item>3</item>
        <item>7</item>
    </string-array>

    <string-array name="news_searching_keyword_entries">
        <item>Finance</item>
        <item>Business</item>
        <item>Economy</item>
        <item>Stocks</item>
        <item>Trading</item>
        <item>Cryptocurrency</item>
    </string-array>

    <string-array name="news_searching_keyword_values">
        <item>finance</item>
        <item>business</item>
        <item>economy</item>
        <item>stocks</item>
        <item>trading</item>
        <item>cryptocurrency</item>
    </string-array>

    <string name="auto_refresh">auto_refresh</string>
    <string name="number_precision">number_precision</string>
    <string name="news_period">news_period</string>
    <string name="news_searching_keyword">news_searching_keyword</string>
    <string name="clear_favorites">clear_favorites</string>
    <string name="reset_settings">reset_settings</string>

</resources>
